--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ionic-angular": "3.0.1",
     "ionic2-calendar": "^0.2.5",
     "ionicons": "3.0.0",
+    "loadash": "0.0.1",
     "moment": "^2.18.1",
     "rxjs": "5.1.1",
     "sw-toolbox": "3.4.0",
